<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:contentDescription="@string/title_nav_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_nav_search" />

    <item
        android:id="@+id/navigation_library"
        android:contentDescription="@string/title_nav_library"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:title="@string/title_nav_library" />

    <item
        android:id="@+id/navigation_backlog"
        android:contentDescription="@string/title_nav_backlog"
        android:icon="@drawable/ic_format_list_numbered_black_24dp"
        android:title="@string/title_nav_backlog" />

    <item
        android:id="@+id/navigation_statistics"
        android:contentDescription="@string/title_nav_statistics"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/title_nav_statistics" />

</menu>
