...
    android:id="@+id/search_fragment_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SearchFragment">

    <TextView
        android:id="@+id/search_title_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_nav_search"
        android:textSize="@dimen/title_fragment"
...
