...
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.StatisticsFragment">


    <TextView
        android:id="@+id/statistics_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/title_statistics"
        android:textSize="@dimen/title_fragment" />

...
